--- a/src/components/hero-slider/HeroSlider.scss
+++ b/src/components/hero-slider/HeroSlider.scss
@@ -3,6 +3,11 @@
   100% {width: 112%;}
 }
 
+// @keyframes fadeIn {
+//   0% {opacity: 0;}
+//   100% {opacity: 1;}
+// }
+
 .currentPillAnimation::after {
   content: '';
   width: 10%;
@@ -10,3 +15,17 @@
   animation-timing-function: linear;
   animation-name: increaseWidthLr;
 }
+
+// .currentElAnimation {
+//   opacity: 0;
+//   animation-fill-mode: backwards;
+//   animation-name: fadeIn;
+//   animation: 0.5s;
+//   animation-timing-function: ease-in;
+// }
+
+// .transitionBgImage {
+//   transition-property: opacity;
+//   transition-duration: 350ms;
+//   transition-timing-function: ease-in-out;
+// }
